# solana-wallet-a15fbb3a

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  pr-checks.yml  release.yml
backend/: README.md
backend/api/: solana.ts
backend/config/: constants.ts
backend/middleware/: securityMiddleware.ts
backend/models/: wallet.ts
backend/services/: addressService.ts  auditService.ts  crudService.ts  enhancedTokenService.ts  enhancedWalletService.ts  frontendWalletService.ts  passwordService.ts  rateLimitService.ts  securityService.ts  seedPhraseService.ts  sessionService.ts  tokenCrudService.ts  tokenService.ts  tokenValidation.ts  walletCrudService.ts  walletService.ts
backend/smart-contracts/: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
backend/smart-contracts/programs/wallet-program/: Cargo.toml
backend/smart-contracts/programs/wallet-program/src/: lib.rs
backend/utils/: cryptoUtils.ts  httpSecurity.ts  inputValidation.ts  sanitization.ts  walletUtils.ts
docs/: API.md  CONTRIBUTING.md  DEVELOPMENT.md  SECURITY.md  SECURITY_GUIDELINES.md  THREAT_MODEL.md  USER_GUIDE.md  design-system.md
src/: App.tsx  index.css
src/api/: tokenApi.ts  walletApi.ts
src/components/: ContractList.tsx  ContractParameters.tsx  CreateWallet.tsx  ErrorBoundary.tsx  ImportToken.tsx  ImportWallet.tsx  NFTGallery.tsx  RateLimitStatus.tsx  SendReceiveModal.tsx  SmartContractExecution.tsx  SmartContractHeader.tsx  SmartContractInterface.tsx  SwapInterface.tsx  (+18 more)
(+45 files in other folders)
