
[package]
name = "wallet-program"
version = "0.1.0"
description = "Solana wallet smart contract program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wallet_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
